Formatted all HTML, CSS, and JS files

--- a/gpg/index.html
+++ b/gpg/index.html
@@ -44,13 +44,7 @@
         </p>
 
         <p>
-          <a
-            href="./personal-gpg.asc.txt"
-            target="_blank"
-            class="external-link"
-          >
-            Armored Public Key
-          </a>
+          <a href="./personal-gpg.asc.txt" target="_blank" class="external-link"> Armored Public Key </a>
         </p>
       </section>
     </main>
