--- a/index.html
+++ b/index.html
@@ -16,48 +16,22 @@
   <body>
     <header>
       <h1>Chris Bilger, M.C.S. | Portfolio</h1>
-      <img
-        id="header-image"
-        alt="Image of Chris Bilger"
-        src="./images/profile.avif"
-        width="320"
-        height="200.53"
-      />
+      <img id="header-image" alt="Image of Chris Bilger" src="./images/profile.avif" width="320" height="200.53" />
 
       <section>
         <nav>
           <ul>
             <li>
-              <a
-                href="https://github.com/ChristopherBilg"
-                target="_blank"
-                class="external-link"
-                >GitHub</a
-              >
+              <a href="https://github.com/ChristopherBilg" target="_blank" class="external-link">GitHub</a>
             </li>
             <li>
-              <a
-                href="https://www.linkedin.com/in/christopher-bilger/"
-                target="_blank"
-                class="external-link"
-                >LinkedIn</a
-              >
+              <a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank" class="external-link">LinkedIn</a>
             </li>
             <li>
-              <a
-                href="./Christopher-Bilger-Resume-January-2023.pdf"
-                target="_blank"
-                class="external-link"
-                >Resume</a
-              >
+              <a href="./Christopher-Bilger-Resume-January-2023.pdf" target="_blank" class="external-link">Resume</a>
             </li>
             <li>
-              <a
-                href="mailto:christopherbilg@gmail.com"
-                target="_blank"
-                class="external-link"
-                >Email</a
-              >
+              <a href="mailto:christopherbilg@gmail.com" target="_blank" class="external-link">Email</a>
             </li>
             <li><a href="/projects">Projects</a></li>
             <li><a href="/gpg">GPG Keys</a></li>
@@ -73,20 +47,16 @@
         <hr />
 
         <p>
-          Hello and welcome to my portfolio page! I'm Chris Bilger and I am a
-          husband, father, engineer, educator, and leader. I currently work as a
-          Software Engineer at Lockheed Martin where I design, build, test, and
-          deploy full-stack applications for various enterprises.
+          Hello and welcome to my portfolio page! I'm Chris Bilger and I am a husband, father, engineer, educator, and leader. I currently
+          work as a Software Engineer at Lockheed Martin where I design, build, test, and deploy full-stack applications for various
+          enterprises.
         </p>
 
         <p>
-          I am extremely passionate about continuous learning, teaching,
-          discovering, and building in all facets of my life. From my
-          professional career in software engineering to my personal life and
-          hobbies, I want to learn something new every day, and share that new
-          knowledge with others. I curated a long-term roadmap for creating
-          tools to help make people's lives better, easier, safer, more
-          efficient, etc.
+          I am extremely passionate about continuous learning, teaching, discovering, and building in all facets of my life. From my
+          professional career in software engineering to my personal life and hobbies, I want to learn something new every day, and share
+          that new knowledge with others. I curated a long-term roadmap for creating tools to help make people's lives better, easier,
+          safer, more efficient, etc.
         </p>
       </section>
 
@@ -129,9 +99,7 @@
           <h3>Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2022 - <b>Present</b></p>
-          <code
-            >Internal Position: <b>Member of Engineering Staff (L2)</b></code
-          >
+          <code>Internal Position: <b>Member of Engineering Staff (L2)</b></code>
 
           <details>
             <summary>Roles and Responsibilities</summary>
@@ -146,10 +114,8 @@
                 offering of APICurio Registry & APICurio Studio
               </li>
               <li>
-                Member of architecture team overseeing the design of new
-                functionality for Oasis
-                <abbr title="United States Navy Baseline">USN BL</abbr>
-                9.2.3
+                Member of architecture team overseeing the design of new functionality for Oasis
+                <abbr title="United States Navy Baseline">USN BL</abbr> 9.2.3
               </li>
               <li>New Hire Mentor for 1 new employee</li>
             </ul>
@@ -161,18 +127,14 @@
           <p class="family-medical-leave">Family and Medical Leave</p>
           <p>November 2022 - January 2023</p>
 
-          Time spent taking care of my fiancé post-partum and bonding with our
-          newborn baby.
+          Time spent taking care of my fiancé post-partum and bonding with our newborn baby.
         </aside>
 
         <aside>
           <h3>Associate Software Engineer</h3>
           <p class="lockheed-martin">Lockheed Martin Corporation</p>
           <p>May 2020 - April 2022</p>
-          <code
-            >Internal Position:
-            <b>Associate Member of Engineering Staff (L1)</b></code
-          >
+          <code>Internal Position: <b>Associate Member of Engineering Staff (L1)</b></code>
           <details>
             <summary>Roles and Responsibilities</summary>
 
@@ -180,10 +142,7 @@
               <li>Software engineer on the Oasis Base development team</li>
               <li>
                 Software engineer working with the
-                <abbr
-                  title="Synthetic Combat Operator Trainer; Republic of Korea"
-                  >SCOT K2</abbr
-                >
+                <abbr title="Synthetic Combat Operator Trainer; Republic of Korea">SCOT K2</abbr>
                 development team; traveled to the Republic of Korea
               </li>
               <li>
@@ -209,13 +168,10 @@
           <p>Arizona State University</p>
           <p>August 2020 - August 2022</p>
           <p>
-            My master's studies revolved around full-stack application
-            development, security, stability, and scalability.
+            My master's studies revolved around full-stack application development, security, stability, and scalability.
             <br />
             <br />
-            <code
-              >This degree has a concentration in <b>Cybersecurity</b>.</code
-            >
+            <code>This degree has a concentration in <b>Cybersecurity</b>.</code>
           </p>
         </aside>
 
@@ -224,9 +180,8 @@
           <p>Temple University</p>
           <p>August 2018 - May 2020</p>
           <p>
-            By completing my B.S. at Temple University I have gained the skills
-            and knowledge required to advance in the field of computer science
-            and software engineering.
+            By completing my B.S. at Temple University I have gained the skills and knowledge required to advance in the field of computer
+            science and software engineering.
           </p>
         </aside>
 
@@ -235,9 +190,8 @@
           <p>Bucks County Community College</p>
           <p>August 2018 - August 2019</p>
           <p>
-            I was able to complete this degree on top of my coursework at Temple
-            University by finishing the courses at Bucks County Community
-            College during the off-semesters at Temple University.
+            I was able to complete this degree on top of my coursework at Temple University by finishing the courses at Bucks County
+            Community College during the off-semesters at Temple University.
           </p>
         </aside>
 
@@ -246,9 +200,8 @@
           <p>Bucks County Community College</p>
           <p>August 2015 - May 2018</p>
           <p>
-            Bucks County Community College allowed me to work while completing
-            my associates degree. This was crucial in allowing me to graduate
-            and move on to Temple University.
+            Bucks County Community College allowed me to work while completing my associates degree. This was crucial in allowing me to
+            graduate and move on to Temple University.
           </p>
         </aside>
       </section>
@@ -258,50 +211,29 @@
       <section>
         <hr id="technical-and-research-experience" />
         <h2>
-          <a href="#technical-and-research-experience"
-            >Technical & Research Experience</a
-          >
+          <a href="#technical-and-research-experience">Technical & Research Experience</a>
         </h2>
         <hr />
 
         <aside>
           <h3>Academic Research: M.C.S.</h3>
-          <a
-            href="https://github.com/ChristopherBilg/research-papers"
-            target="_blank"
-            class="external-link"
-            >Research Papers</a
-          >
+          <a href="https://github.com/ChristopherBilg/research-papers" target="_blank" class="external-link">Research Papers</a>
           <p>August 2020 - August 2022</p>
-          <p>
-            The above hyperlink is a repository containing all of my research
-            papers.
-          </p>
+          <p>The above hyperlink is a repository containing all of my research papers.</p>
         </aside>
 
         <aside>
           <h3>Developer (Interpreters, VMs, & Compilers)</h3>
           <p>
             crisp |
-            <a
-              href="https://github.com/ChristopherBilg/crisp"
-              target="_blank"
-              class="external-link"
-              >GitHub</a
-            >
+            <a href="https://github.com/ChristopherBilg/crisp" target="_blank" class="external-link">GitHub</a>
             |
-            <a
-              href="https://chrisbilger.com/crisp/"
-              target="_blank"
-              class="external-link"
-              >Website</a
-            >
+            <a href="https://chrisbilger.com/crisp/" target="_blank" class="external-link">Website</a>
           </p>
           <p>May 2022 - June 2022</p>
           <p>
-            Crisp is a dialect of the functional programming language Lisp. This
-            is a toy programming language used for learning about interpreters,
-            virtual machines, and compilers.
+            Crisp is a dialect of the functional programming language Lisp. This is a toy programming language used for learning about
+            interpreters, virtual machines, and compilers.
           </p>
         </aside>
 
@@ -309,25 +241,14 @@
           <h3>Developer & Security Researcher</h3>
           <p>
             ri2p |
-            <a
-              href="https://github.com/ChristopherBilg/ri2p"
-              target="_blank"
-              class="external-link"
-              >GitHub</a
-            >
+            <a href="https://github.com/ChristopherBilg/ri2p" target="_blank" class="external-link">GitHub</a>
             |
-            <a
-              href="https://chrisbilger.com/ri2p/"
-              target="_blank"
-              class="external-link"
-              >Website</a
-            >
+            <a href="https://chrisbilger.com/ri2p/" target="_blank" class="external-link">Website</a>
           </p>
           <p>January 2022 - May 2022</p>
           <p>
             <q cite="https://geti2p.net/"
-              >Every day people use the network to connect with people without
-              worry of being tracked or their data being collected.</q
+              >Every day people use the network to connect with people without worry of being tracked or their data being collected.</q
             >
             - geti2p.net
           </p>
@@ -342,35 +263,26 @@
         <hr />
 
         <p>
-          I have extensive experience working on fast-paced, high-output Agile
-          teams using both Scrum and Kanban methodologies. From self-hosted
-          GitLab instances running CI/CD pipelines to full Atlassian suite
-          production environments, I have the skillset and know-how to
-          architecture, plan, and implement such complex, dynamic systems.
+          I have extensive experience working on fast-paced, high-output Agile teams using both Scrum and Kanban methodologies. From
+          self-hosted GitLab instances running CI/CD pipelines to full Atlassian suite production environments, I have the skillset and
+          know-how to architecture, plan, and implement such complex, dynamic systems.
         </p>
 
         <p>
-          Being a full-stack software engineer gives me the express
-          responsibility to keep up-to-date with the latest trends in frontend,
-          middleware, and backend web development technologies. I've worked
-          professionally with the following tech stacks: MERN, MEVN, Django,
-          Java Springboot, AWS, Azure, and many others.
+          Being a full-stack software engineer gives me the express responsibility to keep up-to-date with the latest trends in frontend,
+          middleware, and backend web development technologies. I've worked professionally with the following tech stacks: MERN, MEVN,
+          Django, Java Springboot, AWS, Azure, and many others.
         </p>
 
         <p>
-          I am most proficient with React and Vue as frontend frameworks,
-          Express JS as middleware, and both NodeJS and Django on the backend.
-          As far as databases go, all types of SQL and NoSQL databases are
-          within my abilities.
+          I am most proficient with React and Vue as frontend frameworks, Express JS as middleware, and both NodeJS and Django on the
+          backend. As far as databases go, all types of SQL and NoSQL databases are within my abilities.
         </p>
 
         <p>
-          I have experience in many areas of software engineering and I'm
-          constantly learning new frameworks, methodologies, tech stacks,
-          development workflows, and processes. I put an extremely high emphasis
-          on well-written and thought-out code as well as code that is
-          documented, linted, formatted, style checked, etc. I truly believe
-          that if you're going to do something (in this case software
+          I have experience in many areas of software engineering and I'm constantly learning new frameworks, methodologies, tech stacks,
+          development workflows, and processes. I put an extremely high emphasis on well-written and thought-out code as well as code that
+          is documented, linted, formatted, style checked, etc. I truly believe that if you're going to do something (in this case software
           engineering), do it right the first time.
         </p>
       </section>
@@ -411,32 +323,22 @@
         </p> -->
 
         <p>
-          <b class="certification-title"
-            >LinkedIn Learning: Become a Thought Leader</b
-          >
+          <b class="certification-title">LinkedIn Learning: Become a Thought Leader</b>
           <br />
-          <q
-            cite="https://www.linkedin.com/learning/paths/become-a-thought-leader"
-            >Thought leaders stand out from the rest in their field—they create
-            their own advantage to advance faster in their careers, attract more
-            business, build more wealth, and spread their message. Learn how to
-            take what you know, what you do, and who you are and share it more
-            widely and effectively to be known as an expert in your industry.</q
+          <q cite="https://www.linkedin.com/learning/paths/become-a-thought-leader"
+            >Thought leaders stand out from the rest in their field—they create their own advantage to advance faster in their careers,
+            attract more business, build more wealth, and spread their message. Learn how to take what you know, what you do, and who you
+            are and share it more widely and effectively to be known as an expert in your industry.</q
           >
           <br />
           <em class="certification-date">August 2022 - Forever</em>
         </p>
 
         <p>
-          <b class="certification-title"
-            >LinkedIn Learning: Master the OWASP Top 10</b
-          >
+          <b class="certification-title">LinkedIn Learning: Master the OWASP Top 10</b>
           <br />
           LinkedIn Learning course for mastering the OWASP Top 10, which
-          <q cite="https://owasp.org/www-project-top-ten/"
-            >is a standard awareness document for developers and web application
-            security.</q
-          >
+          <q cite="https://owasp.org/www-project-top-ten/">is a standard awareness document for developers and web application security.</q>
           <br />
           <em class="certification-date">August 2022 - Forever</em>
         </p>
@@ -444,22 +346,17 @@
         <p>
           <b class="certification-title">DevOps Engineering on AWS</b>
           <br />
-          Accredited through ExitCertified, this certification enhances and
-          verifies my knowledge of developer operations for engineering on
-          Amazon Web Services (AWS). Over a 3-day (24 total hours) training
-          session, I learned about AWS cloud computing services and then passed
-          the examination for using the skills learned.
+          Accredited through ExitCertified, this certification enhances and verifies my knowledge of developer operations for engineering on
+          Amazon Web Services (AWS). Over a 3-day (24 total hours) training session, I learned about AWS cloud computing services and then
+          passed the examination for using the skills learned.
           <br />
           <em class="certification-date">June 2021 - Forever</em>
         </p>
 
         <p>
-          <b class="certification-title"
-            >United States Security Clearance - Secret</b
-          >
+          <b class="certification-title">United States Security Clearance - Secret</b>
           <br />
-          Granted by the United States Department of Defense (DOD) and Defense
-          Counterintelligence and Security Agency (DCSA).
+          Granted by the United States Department of Defense (DOD) and Defense Counterintelligence and Security Agency (DCSA).
           <br />
           <em class="certification-date">July 2020 - <b>Present</b></em>
         </p>
