--- a/projects/browser-cryptography/index.html
+++ b/projects/browser-cryptography/index.html
@@ -14,9 +14,7 @@
   </head>
 
   <body>
-    <noscript id="full-screen-noscript-message">
-      Please enable JavaScript in order to view this webpage.
-    </noscript>
+    <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
     <main hidden></main>
 
