--- a/projects/desktop-environment/index.html
+++ b/projects/desktop-environment/index.html
@@ -9,17 +9,11 @@
 
     <title>Desktop Environment (Webtop)</title>
     <link rel="icon" type="image/x-icon" href="../../images/favicon.ico" />
-    <link
-      rel="stylesheet"
-      media="screen"
-      href="https://unpkg.com/normalize.css/normalize.css"
-    />
+    <link rel="stylesheet" media="screen" href="https://unpkg.com/normalize.css/normalize.css" />
   </head>
 
   <body>
-    <noscript id="full-screen-noscript-message">
-      Please enable JavaScript in order to view this webpage.
-    </noscript>
+    <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
     <main hidden></main>
 
@@ -54,11 +48,7 @@
               #background {
                 width: 100vw;
                 height: 100vh;
-                background-image: linear-gradient(
-                  to bottom right,
-                  blue -40%,
-                  purple
-                );
+                background-image: linear-gradient(to bottom right, blue -40%, purple);
               }
 
               #top-bar {
