--- a/projects/js-drag-and-drop/index.html
+++ b/projects/js-drag-and-drop/index.html
@@ -14,9 +14,7 @@
   </head>
 
   <body>
-    <noscript id="full-screen-noscript-message">
-      Please enable JavaScript in order to view this webpage.
-    </noscript>
+    <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
     <main hidden>
       <a href="/projects">Back to Projects List</a>
@@ -24,9 +22,8 @@
       <h1>JS Drag and Drop</h1>
 
       <p>
-        The <b>JS Drag and Drop API</b> is designed to allow the users the
-        interact with content on the webpage by "dragging and dropping" the
-        content from one location to another.
+        The <b>JS Drag and Drop API</b> is designed to allow the users the interact with content on the webpage by "dragging and dropping"
+        the content from one location to another.
       </p>
     </main>
 
