--- a/projects/todo-list/index.html
+++ b/projects/todo-list/index.html
@@ -12,9 +12,7 @@
   </head>
 
   <body>
-    <noscript id="full-screen-noscript-message">
-      Please enable JavaScript in order to view this webpage.
-    </noscript>
+    <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
     <script type="module">
       import * as Arlo from "../../js/arlo/index.js";
