--- a/projects/side-notes/index.html
+++ b/projects/side-notes/index.html
@@ -14,9 +14,7 @@
   </head>
 
   <body>
-    <noscript id="full-screen-noscript-message">
-      Please enable JavaScript in order to view this webpage.
-    </noscript>
+    <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
     <main hidden>
       <a href="/projects">Back to Projects List</a>
@@ -24,12 +22,9 @@
       <h1>Side Notes (Note-Taking Web App)</h1>
 
       <p>
-        <b>Side Notes</b> is a minimal, light-weight, todo-style note keeping
-        web application. Side Notes are emphemeral, short lasting and residing
-        solely in your browser storage. This web application keeps all data
-        stored in the browser's internal database, meaning that all side-notes
-        reside only on this browser. Absolutely no data is ever sent away from
-        your local browser.
+        <b>Side Notes</b> is a minimal, light-weight, todo-style note keeping web application. Side Notes are emphemeral, short lasting and
+        residing solely in your browser storage. This web application keeps all data stored in the browser's internal database, meaning that
+        all side-notes reside only on this browser. Absolutely no data is ever sent away from your local browser.
       </p>
     </main>
 
@@ -63,9 +58,7 @@
           }
 
           createSideNote() {
-            this.allSideNotes.push(
-              JSON.parse(JSON.stringify(this.SIDE_NOTE_TEMPLATE))
-            );
+            this.allSideNotes.push(JSON.parse(JSON.stringify(this.SIDE_NOTE_TEMPLATE)));
           }
 
           deleteSideNote(index) {
@@ -73,9 +66,7 @@
           }
 
           getCustomLineCountFromString(s) {
-            return s.split(/\r|\r\n|\n/).length < 2
-              ? 2
-              : s.split(/\r|\r\n|\n/).length;
+            return s.split(/\r|\r\n|\n/).length < 2 ? 2 : s.split(/\r|\r\n|\n/).length;
           }
 
           styles() {
@@ -136,9 +127,7 @@
                           />
                         </div>
                         <textarea
-                          style="height: ${this.getCustomLineCountFromString(
-                            this.allSideNotes[index].data
-                          )}rem;"
+                          style="height: ${this.getCustomLineCountFromString(this.allSideNotes[index].data)}rem;"
                           oninput="${(e) => {
                             this.allSideNotes[index].data = e.target.value;
                             this.saveAllSideNotesToLocalStorage();
