--- a/projects/tabbed-router-ui-demo/index.html
+++ b/projects/tabbed-router-ui-demo/index.html
@@ -11,9 +11,7 @@
   </head>
 
   <body>
-    <noscript id="full-screen-noscript-message">
-      Please enable JavaScript in order to view this webpage.
-    </noscript>
+    <noscript id="full-screen-noscript-message"> Please enable JavaScript in order to view this webpage. </noscript>
 
     <script type="module">
       import * as Arlo from "../../js/arlo/index.js";
@@ -33,13 +31,8 @@
 
       const TabButton = (number, active) => {
         return vdom`
-          <button style="background:${active ? "#555" : "#fff"};color:${
-          active ? "#fff" : "#000"
-        }"
-            onclick="${() =>
-              router.go(
-                `/projects/tabbed-router-ui-demo/tab/${number}`
-              )}">Switch to tab #${number}
+          <button style="background:${active ? "#555" : "#fff"};color:${active ? "#fff" : "#000"}"
+            onclick="${() => router.go(`/projects/tabbed-router-ui-demo/tab/${number}`)}">Switch to tab #${number}
           </button>
         `;
       };
@@ -47,18 +40,9 @@
       class App extends StyledComponent {
         init(router) {
           this.tabs = [
-            new Tab(
-              0,
-              "The first tab's content is pretty bland, nothing special here."
-            ),
-            new Tab(
-              1,
-              "The second tab is a bit more interesting, but it's really nothing of substance."
-            ),
-            new Tab(
-              2,
-              "The third tab embarks on a dazzling discourse of human fallacies."
-            ),
+            new Tab(0, "The first tab's content is pretty bland, nothing special here."),
+            new Tab(1, "The second tab is a bit more interesting, but it's really nothing of substance."),
+            new Tab(2, "The third tab embarks on a dazzling discourse of human fallacies."),
           ];
 
           this.setActiveTab(0);
